--- a/UI/.eslintrc
+++ b/UI/.eslintrc
@@ -16,10 +16,6 @@
       "func-names": ["error", "never"]
   },
   "parserOptions": {
-    "sourceType": "module",
-    "ecmaVersion": 6,
-    "ecmaFeatures": {
-        "jsx": true
-    }
+    "sourceType": "module"
   }
 }
