--- a/UI/package.json
+++ b/UI/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/babel-node server.js"
+    "start": "nodemon server.js --exec babel-node --"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
+    "body-parser": "^1.18.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
@@ -29,5 +30,8 @@
     "express": "^4.16.3",
     "mocha": "^5.1.1",
     "request": "^2.85.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
