--- a/UI/package.json
+++ b/UI/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "mocha": "^5.1.1",
-    "request": "^2.85.0"
+    "request": "^2.85.0",
+    "volleyball": "^1.5.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.3"
