--- a/UI/package.json
+++ b/UI/package.json
@@ -4,8 +4,15 @@
   "description": "An app that enhances customer-to-vendor interaction for easy food delivery",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --compilers js:babel-core/register ./server/test",
+    "lint": "eslint **/*.js",
     "start": "nodemon server.js --exec babel-node --"
+  },
+  "babel": {
+    "presets": [
+      "stage-3",
+      "latest"
+    ]
   },
   "repository": {
     "type": "git",
@@ -19,9 +26,14 @@
   "homepage": "https://github.com/emekafredy/Book-A-Meal#readme",
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.2",
     "babel-eslint": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
@@ -30,6 +42,7 @@
     "express": "^4.16.3",
     "mocha": "^5.1.1",
     "request": "^2.85.0",
+    "should": "^13.2.1",
     "volleyball": "^1.5.0"
   },
   "devDependencies": {
