--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "nyc mocha --compilers js:babel-core/register ./server/test",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "cover": "--reporter=lcov --reporter=text-lcov nyc mocha",
     "lint": "eslint **/*.js",
     "start": "nodemon server.js --exec babel-node --"
   },
@@ -47,8 +48,10 @@
     "volleyball": "^1.5.0"
   },
   "devDependencies": {
+    "babel-plugin-istanbul": "^4.1.6",
     "coveralls": "^3.0.0",
-    "istanbul": "^0.4.5",
+    "istanbul": "^1.0.0-alpha.2",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^1.17.3",
     "nyc": "^11.7.1"
   }
