--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "eslint-plugin-react": "^7.7.0",
     "express": "^4.16.3",
     "mocha": "^3.0.0",
+    "pg": "^7.4.1",
     "request": "^2.85.0",
+    "sequelize": "^4.37.6",
+    "sequelize-cli": "^2.1.0",
     "should": "^13.2.1",
     "volleyball": "^1.5.0"
   },
