--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "an application that enhances customer-to-vendor interaction for easy food delivery",
   "main": "server.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register ./server/test",
+    "test": "nyc --reporter=text mocha --compilers js:babel-core/register ./server/test",
     "lint": "eslint **/*.js --fix",
     "start": "nodemon server.js --exec babel-node  --presets es2015"
   },
@@ -24,12 +24,16 @@
   "homepage": "https://github.com/emekafredy/Book-A-Meal#readme",
   "dependencies": {
     "babel-core": "^6.26.3",
+    "babel-plugin-istanbul": "^4.1.6",
     "body-parser": "^1.18.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "coveralls": "^3.0.1",
     "express": "^4.16.3",
+    "istanbul": "^0.4.5",
     "mocha": "^3.0.0",
     "nodemon": "^1.17.4",
+    "nyc": "^11.7.1",
     "request": "^2.85.0"
   },
   "devDependencies": {
