--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
     "coveralls": "^3.0.1",
     "express": "^4.16.3",
     "istanbul": "^0.4.5",
+    "jsonwebtoken": "^8.2.1",
     "mocha": "^3.0.0",
     "nodemon": "^1.17.4",
     "nyc": "^11.7.1",
-    "request": "^2.85.0"
+    "pg": "^7.4.2",
+    "pg-hstore": "^2.3.2",
+    "request": "^2.85.0",
+    "sequelize": "^4.37.6"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
