--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "12345",
+    "password": "emeka",
     "database": "meals_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "12345",
+    "password": "emeka",
     "database": "meals_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
