--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "an application that enhances customer-to-vendor interaction for easy food delivery",
   "main": "server.js",
   "scripts": {
-    "test": "nyc --reporter=text mocha --compilers js:babel-core/register ./server/test",
+    "test": "nyc --reporter=text --reporter=lcov mocha --compilers js:babel-core/register ./server/test",
     "lint": "eslint **/*.js --fix",
-    "start": "nodemon server.js --exec babel-node  --presets es2015"
+    "start": "nodemon server.js --exec babel-node  --presets es2015",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
