--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-  "presets" : ["es2015"],
-  "env": {
-    "test": {
-      "presets": ["es2015", "react"]
-    }
-  }
+  "presets" : ["es2015"]
 }
