--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint **/*.js --fix",
     "start": "nodemon server.js --exec babel-node  --presets es2015",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "mig": "node_modules/.bin/sequelize db:migrate"
+    "mig": "node ./node_modules/sequelize-cli/lib/sequelize db:migrate"
   },
   "repository": {
     "type": "git",
@@ -43,6 +43,7 @@
     "pg-hstore": "^2.3.2",
     "request": "^2.85.0",
     "sequelize": "^4.37.6",
+    "sequelize-cli": "^4.0.0",
     "swagger": "^0.7.5"
   },
   "devDependencies": {
